syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeBossStageInfo.proto";
import "ChallengeBossEquipment.proto";
import "ChallengeBossRelic.proto";

// Pdeaocdjmag
message ChallengeBossInfo {
    ChallengeBossStageInfo CKIOKLMJCBG = 15;
    repeated uint32 team_one = 13;
    map<uint32, ChallengeBossEquipment> equipments = 8; // kckmgdgifif
    ChallengeBossStageInfo PJJOCDBJOFO = 12;
    bool ppnagbnioao = 10;
    map<uint32, ChallengeBossRelic> relics = 7; // padhagkggpb
    repeated uint32 team_two = 2;
}