syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message ChessRogueAvatar {
    uint32 avatar_id = 6;
}