syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message FinishTutorialCsReq {
    uint32 group_id = 13;
}